--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,16 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+
+    maven { url "https://repo.dmulloy2.net/repository/public/" }
+
 }
 
 dependencies {
     compileOnly "org.spigotmc:spigot-api:1.20.2-R0.1-SNAPSHOT"
+
+    compileOnly 'com.comphenix.protocol:ProtocolLib:5.1.0'
+
 }
 
 def targetJavaVersion = 17
