--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group = 'marumasa'
-version = '1.2'
+version = '1.2.1'
 
 repositories {
     mavenCentral()
@@ -16,14 +16,15 @@ repositories {
         url = "https://oss.sonatype.org/content/groups/public/"
     }
 
-    maven { url "https://repo.dmulloy2.net/repository/public/" }
+    //maven { url "https://repo.dmulloy2.net/repository/public/" }
 
 }
 
 dependencies {
     compileOnly "org.spigotmc:spigot-api:1.20.2-R0.1-SNAPSHOT"
 
-    compileOnly 'com.comphenix.protocol:ProtocolLib:5.1.0'
+    //compileOnly 'com.comphenix.protocol:ProtocolLib:5.1.0'
+    compileOnly 'net.dmulloy2:ProtocolLib:5.1.0'
 
 }
 
